# AlphaDog

./: .env.example  .gitignore  README.md  _shot.mjs  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prisma.config.ts  turbo.json
.claude/: launch.json
apps/mobile/: app.json  eas.json  eslint.config.js  metro.config.js  package.json  vitest.config.ts
apps/mobile/app/: _layout.tsx  index.tsx  subscribe.tsx
apps/website/: eslint.config.mjs  package.json  prisma.config.ts
apps/website/prisma/: schema.prisma
docs/: PENDENCIAS-MOBILE.md  PENDENCIAS.md  ROADMAP.md
scripts/: baseline.mjs  check-links.mjs  db-migrate.mjs  db-smoke.mjs  db-verify.mjs  export-brand.mjs  shot-funnel.mjs  shot-offer.mjs  shot.mjs  walk-funnel.mjs
services/ai/: README.md  pyproject.toml
services/ai/data/: posture_labels.json
services/ai/notebooks/: train_colab.ipynb  train_kaggle.ipynb
services/ai/scripts/: calibrate_thresholds.py  diagnose_signals.py  export_classifier.py  feasibility.py  inspect_model.py  label_postures.py  learn_posture.py  prepare_dataset.py  run_gate.py  train.py  verify_dataset.py  zip_dataset.py
services/ai/src/alphadog_ai/: dataset.py  evaluation.py  exercise.py  keypoints.py  labels.py  posture.py
services/ai/tests/: factories.py  test_dataset.py  test_evaluation.py  test_exercise.py  test_labels.py  test_posture.py  test_prepare_dataset.py
src/app/: globals.css  layout.tsx  page.tsx  sitemap.ts
src/lib/: routes.ts  site-config.ts
supabase/migrations/: 0001_mobile_core.sql  0002_subscriptions.sql  0003_exercise_library.sql
(+124 files in other folders)
