[project]
name = "alphadog-ai"
version = "0.1.0"
description = "Treino, export e avaliação dos modelos de visão do AlphaDog"
requires-python = ">=3.11"

# A lógica de postura e exercício é Python puro, sem dependência de ML: roda em
# qualquer máquina, sem GPU. É o que permite testar a decisão de produto
# ("o que conta como sentado") antes de existir modelo treinado.
dependencies = []

[project.optional-dependencies]
# Só necessário para treinar e exportar. A inferência em produção é on-device,
# no celular — este serviço nunca infere em runtime.
train = [
  "ultralytics>=8.3",
  "torch>=2.4",
  "opencv-python>=4.10",
  "onnx>=1.17",
  "onnxruntime>=1.20",
]
dev = ["pytest>=8.0", "ruff>=0.6", "mypy>=1.11"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/alphadog_ai"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "tests"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src", "tests"]
